syntax = "proto3";

import "com/navercorp/scavenger/model/CommonPublicationData.proto";

option java_package = "com.navercorp.scavenger.model";
option java_multiple_files = true;

message CallStackDataPublication {
    message CallStackDataEntry {
        string callee = 1;
        repeated string callers = 2;
    }

    CommonPublicationData common_data = 1;
    repeated CallStackDataEntry entry = 2;
    int64 recording_interval_started_at_millis = 3;
}
